@@ -1,6 +1,6 @@
 Recent user-visible changes to Jacl & Tcl Blend:
 
-RCS: @(#) $Id: changes.txt,v 1.40.2.1 2000/03/30 08:58:37 mo Exp $
+RCS: @(#) $Id: changes.txt,v 1.40.2.2 2000/03/30 09:03:41 mo Exp $
 
 ----------------- Released 1.0a1, 10/22/97 -----------------------
 
@@ -1032,6 +1032,9 @@ version was back ported.
 There was an "off by one" bug in the Jacl parser that
 caused \uXXXX sequences to be parsed incorrectly. This
 fix was back ported from the 1.3 version.
+
+04/01/2000 (back ported pyramidpkg fix)
+The pyramidpkg demo is now only supplied with Jacl.
 
 ----------------- Released 1.2.6, XX/XX/XX -----------------------
 
